@@ -1,0 +1,59 @@
+# Copyright 2022 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+# Tests -exec-next command.
+#
+
+load_lib sycl.exp
+
+global hex
+global decimal
+
+standard_testfile simd.cpp
+
+if {[skip_sycl_tests]} {
+    unsupported "target does not support SYCL"
+    return 0
+}
+
+if { ![require_sycl_device "gpu" "Intel*"] } {
+    unsupported "test is aimed at Intel GPUs only"
+    return 0
+}
+
+if {[prepare_sycl_for_testing $binfile $srcfile]} {
+    return -1
+}
+
+mi_clean_restart $binfile
+
+if {[mi_start_sycl_program] < 0} {
+    return -1
+}
+
+set kernel_first_line [gdb_get_line_number "kernel-first-line"]
+set kernel_dim0_line [gdb_get_line_number "kernel-dim0-defined"]
+
+mi_continue_to_line $kernel_first_line "Continue to 'kernel_first_line' and stop at breakpoint"
+
+# Test next command and expect the response to contain
+# reason="end-stepping-range",execution-mask="$hex",simd-width="$decimal".
+mi_next_extra ",execution-mask=\"$hex\",simd-width=\"$decimal\"" "next to next line"
+
+# Continue to end.
+mi_send_resuming_command "exec-continue" "continuing to inferior exit"
+
+# Expect normal exit.
+mi_expect_stop "exited-normally" "" "" "" "" "" "exit normally"
